# robotworld

./: .clang-tidy  .gitattributes  .gitignore  AUTHORS  Doxyfile.in  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  readme.md  student_README.md
config/: config.txt  worldconfig.txt
docs/doxygen/: MainPage.dox
linux/: .gitignore
mingw/: .gitignore
scripts/: run.sh
src/: AStar.cpp  AStar.hpp  AbstractActuator.cpp  AbstractActuator.hpp  AbstractAgent.cpp  AbstractAgent.hpp  AbstractSensor.cpp  AbstractSensor.hpp  BoundedVector.cpp  BoundedVector.hpp  Button.hpp  Checkbox.hpp  Client.hpp  CommandlineArgument.hpp  CommunicationService.hpp  CompassSensor.cpp  CompassSensor.hpp  ConfigReader.cpp  ConfigReader.hpp  DistancePercept.hpp  DistancePercepts.hpp  DistanceStimuli.hpp  DistanceStimulus.hpp  FileTraceFunction.hpp  Goal.cpp  Goal.hpp  GoalShape.cpp  GoalShape.hpp  ITraceFunction.hpp  Kalman.cpp  Kalman.hpp  LaserDistanceSensor.cpp  LaserDistanceSensor.hpp  LidarSensor.cpp  LidarSensor.hpp  LineShape.cpp  LineShape.hpp  LogTextCtrl.cpp  LogTextCtrl.hpp  Main.cpp  (+72 more)
